welcome.lessons.welcome.array.has271.Has271.scala.error
has271:8: error: not found: value array667
    case _ => array667(copieTableauSaufUn(nums))
              ^